--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "json-server": "^1.0.0-alpha.23",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-auth-kit": "^3.1.2",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
